--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,14 @@
 {
   "name": "sigacamara",
   "app_id": "",
-  "type": "ionic1"
+  "type": "ionic1",
+  "integrations": {
+    "gulp": {}
+  },
+  "watchPatterns": [
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
